[gd_scene load_steps=7 format=3 uid="uid://lgblb76jw4um"]

[ext_resource type="Script" path="res://Main.gd" id="1_f67ty"]
[ext_resource type="PackedScene" uid="uid://c36x7r08smn7g" path="res://StatusChecker.tscn" id="2_oc3fy"]
[ext_resource type="PackedScene" uid="uid://d0o7l4mbvu3b6" path="res://recording_list_item.tscn" id="3_fv5qe"]
[ext_resource type="Script" path="res://obs_helper.gd" id="4_ci20n"]
[ext_resource type="PackedScene" uid="uid://cebgjvnptsywt" path="res://app_toggle.tscn" id="5_goggj"]

[sub_resource type="LabelSettings" id="LabelSettings_70utc"]
font_size = 20

[node name="Node" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f67ty")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Config" type="Control" parent="VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Config"]
layout_mode = 2
offset_right = 318.0
offset_bottom = 31.0
text = "Config Checks"
label_settings = SubResource("LabelSettings_70utc")
horizontal_alignment = 1

[node name="SaveCheck" parent="VBoxContainer/HBoxContainer/Config" instance=ExtResource("2_oc3fy")]
layout_mode = 2
offset_top = 35.0
offset_right = 318.0
offset_bottom = 61.0
script = null

[node name="AssetsCheck" parent="VBoxContainer/HBoxContainer/Config" instance=ExtResource("2_oc3fy")]
layout_mode = 2
offset_top = 65.0
offset_right = 318.0
offset_bottom = 96.0
script = null

[node name="Actions" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Actions"]
layout_mode = 2
text = "New Recordings This Session"

[node name="RecordingList" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/Actions"]
layout_mode = 2

[node name="RecordingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Open Recordings Folder"

[node name="ExternalApps" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ExternalApps"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -269.0
grow_horizontal = 0
grow_vertical = 2

[node name="AppToggle" parent="VBoxContainer/ExternalApps/VBoxContainer" instance=ExtResource("5_goggj")]
layout_mode = 2
app_title = "OBS"
target_file = "obs64.exe"
auto_start = true

[node name="AppToggle2" parent="VBoxContainer/ExternalApps/VBoxContainer" instance=ExtResource("5_goggj")]
layout_mode = 2
app_title = "NG3"
target_file = "NG3Game.exe"

[node name="OBSHelper" type="CanvasLayer" parent="." node_paths=PackedStringArray("app_toggle", "recording_list")]
script = ExtResource("4_ci20n")
app_toggle = NodePath("../VBoxContainer/ExternalApps/VBoxContainer/AppToggle")
recording_list = NodePath("../VBoxContainer/HBoxContainer/Actions/RecordingList")
recording_list_item = ExtResource("3_fv5qe")

[node name="Button" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -30.0
offset_bottom = 31.0
grow_horizontal = 0
text = "âš™"

[node name="LinkButton" type="LinkButton" parent="."]
layout_mode = 0
offset_left = 146.0
offset_top = 87.0
offset_right = 186.0
offset_bottom = 127.0
text = "test"
uri = "steam://rungameid/897160"

[connection signal="pressed" from="VBoxContainer/RecordingsButton" to="OBSHelper" method="_on_recordings_button_pressed"]
